<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_nav"
        android:enabled="true"
        android:icon="@drawable/ic_menu_home_normal"
        android:tint="@color/white"
        android:title="@string/home_nav"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/results_nav"
        android:enabled="true"
        android:icon="@drawable/ic_menu_report_normal"
        android:tint="@color/white"
        android:title="@string/result_nav"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/settings_nav"
        android:enabled="true"
        android:icon="@drawable/ic_menu_preferences_normal"
        android:tint="@color/white"
        android:title="@string/settings_nav"
        app:showAsAction="never"
        />
</menu>